# sync-git-with-icloud

./: .dockerignore  .env_template  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  PLAN.md  README.md  TESTING.md  build-and-run.sh  load-env.sh  pyproject.toml  test.sh  test_rclone_real.py
run/: docker_build.sh  docker_build_and_run.sh  docker_push.sh  docker_run.sh  run_with_env.sh  setup_env.sh  test_all.sh  test_config.sh  test_module.sh  test_run.sh  update_version.sh
sync_icloud_git/: __init__.py  cli.py  cloud_operations.py  config.py  git_operations.py  icloud_operations.py
tests/: test_basic.py  test_cli.py  test_cloud_operations.py  test_config.py  test_git_operations.py  test_icloud_operations.py
